--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,10 @@ generated
 userSpecific/*
 !userSpecific/globalVariables.default.bat
 !userSpecific/globalVariables.common.bat
+!userSpecific/globalVariables.default.sh
+!userSpecific/globalVariables.common.sh
 /thirdParties/itk/g
 /internal
 qLibs.7z
 backupInternal.bat
+sync.ffs_db
